[project]
name = "blank-app-template"
version = "0.1.0"
description = "A simple Streamlit app template."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.58.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.9.0",
    "joblib>=1.5.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[tool.uv]
package = false
